Adding post, put and delete enpoints for Language
