# src/routes/v1/Language.ts
@@ -1,9 +1,12 @@
 import { Router } from "express";
-import { addLanguage, listLanguages } from "../../controllers/Language";
+import { addLanguage, editLanguage, getLanguage, listLanguages, removeLanguage } from "../../controllers/Language";
 
 const LanguagesRouter: Router = Router();
 
 LanguagesRouter.get('/', listLanguages);
 LanguagesRouter.post('/', addLanguage);
+LanguagesRouter.get('/:id', getLanguage);
+LanguagesRouter.put('/:id', editLanguage);
+LanguagesRouter.delete('/:id', removeLanguage);
 
 export default LanguagesRouter;
